package tech.penser.stompy_rhino.domain.security;

public enum Permission {
    READ,
    WRITE,
    EDIT,
    DELETE,
    UPDATE_METADATA,
    SHARE
}
